fixed minor css contrast issues

--- a/estilo.css
+++ b/estilo.css
@@ -9,8 +9,8 @@ body {
 /*001*/
 h1, h2, h3, h4, h5, h6{
     font-weight: 700;
-	color: rgb(13,255,113);
-	background-color: rgb(58,63,86);
+	color: #0DFF71;
+	background-color: #2B2D40;
 	text-align: center;
 	text-transform: uppercase;
 	
